--- a/web/index.html
+++ b/web/index.html
@@ -295,7 +295,7 @@
 $(function(){
 
     var dragBtnCls = '#input-list .item .drag',
-            droppableCls = '#screen-wall-one .droppable,#screen-wall-two .droppable';
+            droppableCls = '#screen-wall-one .droppable';
 
     var app = new SkyApp();
     app.init(dragBtnCls, droppableCls);
