--- a/web/index.html
+++ b/web/index.html
@@ -92,7 +92,7 @@
 
                     <!-- Tab panes -->
                     <div class="tab-content">
-                        <div role="tabpanel" class="tab-pane " id="input">
+                        <div role="tabpanel" class="tab-pane active" id="input">
                             <ul id="input-list" class="input">
                                 <li class="sky-btn item">
                                     <i class="fa fa-desktop fa-lg"></i>
@@ -122,7 +122,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div role="tabpanel" class="tab-pane active" id="setting">
+                        <div role="tabpanel" class="tab-pane" id="setting">
                             <div id="setting-info">
                                 <div class="title">通讯配置</div>
                                 <form class="form">
@@ -186,93 +186,58 @@
             </div>
         </div>
         <div class="col right">
-            <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="screen-wall-one">
-                    <div class="panel panel-inverse">
-                        <div class="panel-heading">
 
-                            <ul class="action-btn-group left">
-                                <li class="sky-btn item"><a class="new-win" data-localize="index.right.action.btnname1" data-replace="right"><i class="fa fa-plus"></i> </a></li>
-                                <li class="sky-btn item"><a class="close-win" data-localize="index.right.action.btnname2" data-replace="right"><i class="fa fa-close"></i> </a></li>
-                                <li class="sky-btn item"><a class="clear-win" data-localize="index.right.action.btnname3" data-replace="right"><i class="fa fa-trash-o"></i> </a></li>
-                            </ul>
-                            <ul class="action-btn-group right">
-                                <li class="sky-btn item dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">100% <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">25%</a></li>
-                                        <li><a href="#">50%</a></li>
-                                        <li><a href="#">75%</a></li>
-                                        <li><a href="#">100%</a></li>
-                                        <li><a href="#">125%</a></li>
-                                        <li><a href="#">150%</a></li>
-                                        <li><a href="#">175%</a></li>
-                                        <li><a href="#">200%</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
 
-                        </div>
-                        <div class="panel-body" >
+                    <ul class="action-btn-group left">
+                        <li class="sky-btn item"><a class="new-win" data-localize="index.right.action.btnname1" data-replace="right"><i class="fa fa-plus"></i> </a></li>
+                        <li class="sky-btn item"><a class="close-win" data-localize="index.right.action.btnname2" data-replace="right"><i class="fa fa-close"></i> </a></li>
+                        <li class="sky-btn item"><a class="clear-win" data-localize="index.right.action.btnname3" data-replace="right"><i class="fa fa-trash-o"></i> </a></li>
+                    </ul>
+                    <ul class="action-btn-group right">
+                        <li class="sky-btn item dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">100% <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">25%</a></li>
+                                <li><a href="#">50%</a></li>
+                                <li><a href="#">75%</a></li>
+                                <li><a href="#">100%</a></li>
+                                <li><a href="#">125%</a></li>
+                                <li><a href="#">150%</a></li>
+                                <li><a href="#">175%</a></li>
+                                <li><a href="#">200%</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="panel-body" >
+                    <div class="tab-content">
+                        <div role="tabpanel" id="screen-wall-one" class="tab-pane active">
                             <div class="droppable" >
                             </div>
                         </div>
-                        <div class="panel-footer">
-                            <!--<ul class="ellipsis-btn">-->
-                            <!--<li class="sky-btn item"><a>01</a></li>-->
-                            <!--<li class="sky-btn item"><a>02</a></li>-->
-                            <!--<li class="sky-btn item"><a>03</a></li>-->
-                            <!--<li class="sky-btn item"><a>04</a></li>-->
-                            <!--<li class="sky-btn item"><i class="fa fa-ellipsis-h"></i></li>-->
-                            <!--</ul>-->
-                            <ul class="nav nav-pills">
-                                <li role="presentation" class="active"><a href="#">01</a></li>
-                                <li role="presentation"><a href="#">02</a></li>
-                                <li role="presentation"><a href="#">03</a></li>
-                                <li role="presentation"><a href="#"><i class="fa fa-ellipsis-h"></i></a></li>
-                            </ul>
+                        <div role="tabpanel" id="screen-wall-two" class="tab-pane">
+                            <div class="droppable" >
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="screen-wall-two">
-                    <div class="panel panel-inverse">
-                        <div class="panel-heading">
-
-                            <ul class="action-btn-group left">
-                                <li class="sky-btn item"><a class="new-win" data-localize="index.right.action.btnname1" data-replace="right"><i class="fa fa-plus"></i> </a></li>
-                                <li class="sky-btn item"><a class="close-win" data-localize="index.right.action.btnname2" data-replace="right"><i class="fa fa-close"></i> </a></li>
-                                <li class="sky-btn item"><a class="clear-win" data-localize="index.right.action.btnname3" data-replace="right"><i class="fa fa-trash-o"></i> </a></li>
-                            </ul>
-                            <ul class="action-btn-group right">
-                                <li class="sky-btn item dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">100% <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">25%</a></li>
-                                        <li><a href="#">50%</a></li>
-                                        <li><a href="#">75%</a></li>
-                                        <li><a href="#">100%</a></li>
-                                        <li><a href="#">125%</a></li>
-                                        <li><a href="#">150%</a></li>
-                                        <li><a href="#">175%</a></li>
-                                        <li><a href="#">200%</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-
-                        </div>
-                        <div class="panel-body" >
-                            <div class="droppable" >
-                            </div>
-                        </div>
-                        <div class="panel-footer">
-                            <ul class="nav nav-pills">
-                                <li role="presentation" class="active"><a href="#">01</a></li>
-                                <li role="presentation"><a href="#">02</a></li>
-                                <li role="presentation"><a href="#">03</a></li>
-                                <li role="presentation"><a href="#"><i class="fa fa-ellipsis-h"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="panel-footer">
+                    <!--<ul class="ellipsis-btn">-->
+                    <!--<li class="sky-btn item"><a>01</a></li>-->
+                    <!--<li class="sky-btn item"><a>02</a></li>-->
+                    <!--<li class="sky-btn item"><a>03</a></li>-->
+                    <!--<li class="sky-btn item"><a>04</a></li>-->
+                    <!--<li class="sky-btn item"><i class="fa fa-ellipsis-h"></i></li>-->
+                    <!--</ul>-->
+                    <ul class="nav nav-pills">
+                        <li role="presentation" class="active"><a href="#">01</a></li>
+                        <li role="presentation"><a href="#">02</a></li>
+                        <li role="presentation"><a href="#">03</a></li>
+                        <li role="presentation"><a href="#"><i class="fa fa-ellipsis-h"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -293,12 +258,11 @@
 <script src="js/main.js" type="text/javascript"></script>
 <script>
 $(function(){
-
     var dragBtnCls = '#input-list .item .drag',
-            droppableCls = '#screen-wall-one .droppable';
+        droppableCls1 = '#screen-wall-one .droppable',
+        droppableCls2 = '#screen-wall-two .droppable';
 
-    var app = new SkyApp();
-    app.init(dragBtnCls, droppableCls);
+    new SkyApp();
 //    fitElement('.droppable img', '.droppable');
 })
 </script>
