--- a/web/index.html
+++ b/web/index.html
@@ -215,11 +215,11 @@
                 <div class="panel-body" >
                     <div class="tab-content">
                         <div role="tabpanel" id="screen-wall-one" class="tab-pane active">
-                            <div class="droppable" >
+                            <div class="droppable" data-cvs-grid="3_3">
                             </div>
                         </div>
                         <div role="tabpanel" id="screen-wall-two" class="tab-pane">
-                            <div class="droppable" >
+                            <div class="droppable" data-cvs-grid="2_2">
                             </div>
                         </div>
                     </div>
