--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,9 @@
     <title data-localize="index.title"></title>
 
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="lib/font-awesome-4.4.0/css/font-awesome.min.css">
+    <link href="lib/messenger/css/messenger.css" rel="stylesheet">
+    <link href="lib/messenger/css/messenger-theme-flat.css" rel="stylesheet">
+    <link href="lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -244,25 +246,26 @@
     </div>
 </div>
 
-<script src="lib/jquery-1.11.3.min.js"></script>
+<script src="lib/jquery-2.1.4.js"></script>
+<script src="lib/modernizr.min.js" type="text/javascript"></script>
 
 <script src="lib/i18n/jquery.i18n.properties.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-
-<script src="lib/modernizr.min.js" type="text/javascript"></script>
+<script src="lib/messenger/js/messenger.js"></script>
+<script src="lib/messenger/js/messenger-theme-flat.js"></script>
 <!--<script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>-->
 <script src="lib/jquery-pep-js/jquery.pep.js" type="text/javascript"></script>
 <script src="lib/hammer-js/hammer.js" type="text/javascript"></script>
 <script src="lib/hammer-js/jquery.hammer.js" type="text/javascript"></script>
 <script src="lib/fullscreen.js" type="text/javascript"></script>
+<script src="lib/jquery-indexeddb/jquery.indexeddb.js" type="text/javascript"></script>
+
 <script src="js/main.js" type="text/javascript"></script>
+
 <script>
 $(function(){
-    var dragBtnCls = '#input-list .item .drag',
-        droppableCls1 = '#screen-wall-one .droppable',
-        droppableCls2 = '#screen-wall-two .droppable';
 
-    new SkyApp();
+    var app = new SkyApp();
 //    fitElement('.droppable img', '.droppable');
 })
 </script>
