--- a/web/index.html
+++ b/web/index.html
@@ -246,6 +246,15 @@
     </div>
 </div>
 
+<div id="hover-menu">
+    <ul>
+        <li><a>单屏最大化</a></li>
+        <li><a>全屏最大化</a></li>
+        <li><a>上移一层</a></li>
+        <li><a>下移一层</a></li>
+    </ul>
+</div>
+
 <script src="lib/jquery-2.1.4.js"></script>
 <script src="lib/modernizr.min.js" type="text/javascript"></script>
 
