--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     <!--<link rel="icon" href="favicon.ico">-->
     <title data-localize="index.title"></title>
 
-    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/messenger/css/messenger.css" rel="stylesheet">
     <link href="lib/messenger/css/messenger-theme-flat.css" rel="stylesheet">
     <link href="lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
@@ -95,7 +95,7 @@
                     <!-- Tab panes -->
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active" id="input">
-                            <ul id="input-list" class="input">
+                            <ul class="input">
                                 <li class="sky-btn item">
                                     <i class="fa fa-desktop fa-lg"></i>
                                     <div class="drag">
@@ -117,10 +117,12 @@
                                 <li class="sky-btn item">
                                     <i class="fa fa-desktop fa-lg"></i>
                                     <span>情景模式一</span>
+                                    <img class="grid3x3" src="img/3_3.png">
                                 </li>
                                 <li class="sky-btn item">
                                     <i class="fa fa-desktop fa-lg"></i>
                                     <span>情景模式二</span>
+                                    <img class="grid2x2" src="img/2_2.png">
                                 </li>
                             </ul>
                         </div>
@@ -269,32 +271,32 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">窗口信息</h4>
+                <h4 class="modal-title" data-localize="index.modal.title"></h4>
             </div>
             <div class="modal-body">
                 <p>啦啦啦&hellip;</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" data-localize="index.modal.btn.close"></button>
             </div>
         </div>
     </div>
 </div>
 
-<script src="lib/jquery-2.1.4.js"></script>
+<script src="lib/jquery-2.1.4.min.js"></script>
 <script src="lib/modernizr.min.js" type="text/javascript"></script>
 
 <script src="lib/i18n/jquery.i18n.properties.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-<script src="lib/messenger/js/messenger.js"></script>
+<script src="lib/messenger/js/messenger.min.js"></script>
 <script src="lib/messenger/js/messenger-theme-flat.js"></script>
 <!--<script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>-->
 <script src="lib/jquery-pep-js/jquery.pep.js" type="text/javascript"></script>
 <script src="lib/hammer-js/hammer.js" type="text/javascript"></script>
 <script src="lib/hammer-js/jquery.hammer.js" type="text/javascript"></script>
 <script src="lib/fullscreen.js" type="text/javascript"></script>
-<script src="lib/jquery-indexeddb/jquery.indexeddb.js" type="text/javascript"></script>
+<!--<script src="lib/jquery-indexeddb/jquery.indexeddb.min.js" type="text/javascript"></script>-->
+<script src="lib/html2canvas/html2canvas.min.js" type="text/javascript"></script>
 
 <script src="js/main.js" type="text/javascript"></script>
 
@@ -302,6 +304,8 @@
 $(function(){
 
     var app = new SkyApp();
+
+
 })
 </script>
 </body>
