--- a/web/index.html
+++ b/web/index.html
@@ -227,6 +227,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="mouse-pos">x:0,y:0</div>
                 </div>
                 <div class="panel-footer">
                     <!--<ul class="ellipsis-btn">-->
@@ -248,6 +249,7 @@
     </div>
 </div>
 
+<!--弹出菜单-->
 <div id="pop-menu">
     <ul>
         <li><a class="single-screen" class="disable"><i class="fa fa-expand"></i><span data-localize="index.pop_menu.full_sgl_src">单屏最大化</span></a></li>
@@ -265,6 +267,7 @@
     </ul>
 </div>
 
+<!--弹出消息框-->
 <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>-->
 <div id="modal-win-info" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
     <div class="modal-dialog modal-sm">
@@ -274,10 +277,36 @@
                 <h4 class="modal-title" data-localize="index.modal.title"></h4>
             </div>
             <div class="modal-body">
-                <p>啦啦啦&hellip;</p>
+                <form>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon" id="win-id" data-localize="index.modal.lable.id"></span>
+                            <input type="text" class="form-control" aria-describedby="win-id" placeholder="id" disabled>
+                            <span class="input-group-addon" id="win-sid" data-localize="index.modal.lable.sid"></span>
+                            <input type="text" class="form-control" aria-describedby="win-sid" placeholder="sid" disabled>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon" id="win-x" data-localize="index.modal.lable.x"></span>
+                            <input type="text" class="form-control" aria-describedby="win-x" placeholder="x">
+                            <span class="input-group-addon" id="win-y" data-localize="index.modal.lable.y"></span>
+                            <input type="text" class="form-control" aria-describedby="win-y" placeholder="y">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon" id="win-w" data-localize="index.modal.lable.w"></span>
+                            <input type="text" class="form-control" aria-describedby="win-w" placeholder="w">
+                            <span class="input-group-addon" id="win-h" data-localize="index.modal.lable.h"></span>
+                            <input type="text" class="form-control" aria-describedby="win-h" placeholder="h">
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-localize="index.modal.btn.close"></button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" data-localize="index.modal.btn.close"></button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" data-localize="index.modal.btn.save"></button>
             </div>
         </div>
     </div>
