--- a/web/index.html
+++ b/web/index.html
@@ -280,33 +280,33 @@
                 <form>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon" id="win-id" data-localize="index.modal.lable.id"></span>
-                            <input type="text" class="form-control" aria-describedby="win-id" placeholder="id" disabled>
-                            <span class="input-group-addon" id="win-sid" data-localize="index.modal.lable.sid"></span>
-                            <input type="text" class="form-control" aria-describedby="win-sid" placeholder="sid" disabled>
+                            <span class="input-group-addon" id="lable-id" data-localize="index.modal.lable.id"></span>
+                            <input type="text" id="win-id" class="form-control" aria-describedby="lable-id" placeholder="id" disabled>
+                            <span class="input-group-addon" id="lable-sid" data-localize="index.modal.lable.sid"></span>
+                            <input type="text" id="win-sid" class="form-control" aria-describedby="lable-sid" placeholder="sid" disabled>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon" id="win-x" data-localize="index.modal.lable.x"></span>
-                            <input type="text" class="form-control" aria-describedby="win-x" placeholder="x">
-                            <span class="input-group-addon" id="win-y" data-localize="index.modal.lable.y"></span>
-                            <input type="text" class="form-control" aria-describedby="win-y" placeholder="y">
+                            <span class="input-group-addon" id="lable-x" data-localize="index.modal.lable.x"></span>
+                            <input type="text" id="win-x" class="form-control" aria-describedby="lable-x" placeholder="x">
+                            <span class="input-group-addon" id="lable-y" data-localize="index.modal.lable.y"></span>
+                            <input type="text" id="win-y" class="form-control" aria-describedby="lable-y" placeholder="y">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="input-group">
-                            <span class="input-group-addon" id="win-w" data-localize="index.modal.lable.w"></span>
-                            <input type="text" class="form-control" aria-describedby="win-w" placeholder="w">
-                            <span class="input-group-addon" id="win-h" data-localize="index.modal.lable.h"></span>
-                            <input type="text" class="form-control" aria-describedby="win-h" placeholder="h">
+                            <span class="input-group-addon" id="lable-w" data-localize="index.modal.lable.w"></span>
+                            <input type="text" id="win-w" class="form-control" aria-describedby="lable-w" placeholder="w">
+                            <span class="input-group-addon" id="lable-h" data-localize="index.modal.lable.h"></span>
+                            <input type="text" id="win-h" class="form-control" aria-describedby="lable-h" placeholder="h">
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal" data-localize="index.modal.btn.close"></button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-localize="index.modal.btn.save"></button>
+                <button type="button" id="win-save" class="btn btn-primary" data-dismiss="modal" data-localize="index.modal.btn.save"></button>
             </div>
         </div>
     </div>
@@ -327,6 +327,7 @@
 <!--<script src="lib/jquery-indexeddb/jquery.indexeddb.min.js" type="text/javascript"></script>-->
 <script src="lib/html2canvas/html2canvas.min.js" type="text/javascript"></script>
 
+<script src="js/tool.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
 <script>
@@ -334,7 +335,7 @@ $(function(){
 
     var app = new SkyApp();
 
-
+    console.log([1,2,2,7,4,5,6,7,7].unique())
 })
 </script>
 </body>
