--- a/web/index.html
+++ b/web/index.html
@@ -98,14 +98,14 @@
                             <ul class="input">
                                 <li class="sky-btn item">
                                     <i class="fa fa-desktop fa-lg"></i>
-                                    <div class="drag">
+                                    <div class="drag" data-signal="1">
                                         <a>1.1-DVI</a>
                                         <div class="content"></div>
                                     </div>
                                 </li>
                                 <li class="sky-btn item">
                                     <i class="fa fa-desktop fa-lg"></i>
-                                    <div class="drag">
+                                    <div class="drag" data-signal="2">
                                         <a>1.2-DVI</a>
                                         <div class="content"></div>
                                     </div>
@@ -113,7 +113,7 @@
                             </ul>
                         </div>
                         <div role="tabpanel" class="tab-pane" id="profiles">
-                            <ul class="input">
+                            <ul>
                                 <li class="sky-btn item">
                                     <i class="fa fa-desktop fa-lg"></i>
                                     <span>情景模式一</span>
@@ -335,7 +335,7 @@ $(function(){
 
     var app = new SkyApp();
 
-    console.log([1,2,2,7,4,5,6,7,7].unique())
+//    console.log([0,1,2,2,7,4,5,6,7,7].queue())
 })
 </script>
 </body>
