--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN" class="main-html">
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <!-- HTTP 1.1 -->
+    <meta http-equiv="pragma" content="no-cache">
+    <!-- HTTP 1.0 -->
+    <meta http-equiv="cache-control" content="no-cache">
+    <!-- Prevent caching at the proxy server -->
+    <meta http-equiv="expires" content="0">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
@@ -345,8 +352,8 @@
     </div>
 </div>
 
-<script src="lib/jquery-2.1.4.min.js"></script>
 <script src="lib/modernizr.min.js" type="text/javascript"></script>
+<script src="lib/jquery-2.1.4.min.js"></script>
 
 <script src="lib/i18n/jquery.i18n.properties.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
