--- a/web/index.html
+++ b/web/index.html
@@ -371,11 +371,27 @@
 <script src="js/main.js" type="text/javascript"></script>
 
 <script>
-$(function(){
+$(function() {
 
     var app = new SkyApp();
 
-})
+
+//    var deletePromise = $.indexedDB("MyECommerceSite").deleteDatabase();
+//
+//    deletePromise.done(function (db, event) {
+//        /* Called when the delete is successful*/
+//        console.log('del done')
+//    });
+//    deletePromise.fail(function (error, event) {
+//        /* Called when the delete is successful*/
+//        console.log('del fail')
+//    });
+//    deletePromise.progress(function (db, event) {
+//        // Called when the deleting is blocked due to another transaction
+//        console.log('del progress')
+//    });
+
+});
 </script>
 </body>
 </html>
