--- a/web/lib/jquery-indexeddb/example/index.html
+++ b/web/lib/jquery-indexeddb/example/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>A self contained example for the Jquery-IndexedDB plugin</title>
-        <script type = "text/javascript" src="../../jquery-2.1.4.js">
+        <script type = "text/javascript" src="../../jquery-2.1.4.min.js">
         </script>
         <!--<script type = "text/javascript" src = "/IndexedDBShim/dist/IndexedDBShim.min.js">-->
         <!--</script>-->
