--- a/web/index.html
+++ b/web/index.html
@@ -219,22 +219,23 @@
                             </div>
                         </div>
                     </div>
-                    <div id="mouse-pos">x:0,y:0</div>
                 </div>
                 <div class="panel-footer">
-                    <!--<ul class="ellipsis-btn">-->
-                    <!--<li class="sky-btn item"><a>01</a></li>-->
-                    <!--<li class="sky-btn item"><a>02</a></li>-->
-                    <!--<li class="sky-btn item"><a>03</a></li>-->
-                    <!--<li class="sky-btn item"><a>04</a></li>-->
-                    <!--<li class="sky-btn item"><i class="fa fa-ellipsis-h"></i></li>-->
-                    <!--</ul>-->
-                    <ul class="nav nav-pills">
-                        <li role="presentation" class="active"><a href="#">01</a></li>
-                        <li role="presentation"><a href="#">02</a></li>
-                        <li role="presentation"><a href="#">03</a></li>
-                        <li role="presentation"><a href="#"><i class="fa fa-ellipsis-h"></i></a></li>
+                    <div id="mouse-pos">x:0,y:0</div>
+
+                    <ul class="ellipsis-btn">
+                        <li class="sky-btn item"><a>01</a></li>
+                        <li class="sky-btn item"><a>02</a></li>
+                        <li class="sky-btn item"><a>03</a></li>
+                        <li class="sky-btn item"><a>04</a></li>
+                        <li class="sky-btn item"><i class="fa fa-ellipsis-h"></i></li>
                     </ul>
+                    <!--<ul class="nav nav-pills">-->
+                        <!--<li role="presentation" class="active"><a href="#">01</a></li>-->
+                        <!--<li role="presentation"><a href="#">02</a></li>-->
+                        <!--<li role="presentation"><a href="#">03</a></li>-->
+                        <!--<li role="presentation"><a href="#"><i class="fa fa-ellipsis-h"></i></a></li>-->
+                    <!--</ul>-->
                 </div>
             </div>
         </div>
@@ -359,7 +360,7 @@
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/messenger/js/messenger.min.js"></script>
 <script src="lib/messenger/js/messenger-theme-flat.js"></script>
-<!--<script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>-->
+<script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>
 <script src="lib/jquery-pep-js/jquery.pep.js" type="text/javascript"></script>
 <script src="lib/hammer-js/hammer.js" type="text/javascript"></script>
 <script src="lib/hammer-js/jquery.hammer.js" type="text/javascript"></script>
