--- a/web/index.html
+++ b/web/index.html
@@ -256,7 +256,7 @@
         <li><a class="win-lock"><i class="fa fa-lock"></i><span data-localize="index.pop_menu.lock"></span></a></li>
         <li><a class="win-unlock"><i class="fa fa-unlock-alt"></i><span data-localize="index.pop_menu.unlock"></span></a></li>
         <li><a class="win-restore"><i class="fa fa-share-square-o"></i><span data-localize="index.pop_menu.restore"></span></a></li>
-        <li><a class="win-info"><i class="fa fa-info-circle"></i><span data-localize="index.pop_menu.info"></span></a></li>
+        <li><a class="win-attr"><i class="fa fa-info-circle"></i><span data-localize="index.pop_menu.attr"></span></a></li>
     </ul>
 </div>
 
@@ -375,7 +375,6 @@
 $(function() {
 
     var app = new SkyApp();
-
 
 //    var deletePromise = $.indexedDB("MyECommerceSite").deleteDatabase();
 //
