--- a/web/index.html
+++ b/web/index.html
@@ -59,14 +59,14 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i></a>
                             <ul id="gbl-setting" class="dropdown-menu">
-                                <li><a href="#">设置1</a></li>
-                                <li><a href="#">设置2</a></li>
-                                <li><a href="#">设置3</a></li>
-                                <li><a href="#">...</a></li>
+                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置1</a></li>
+                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置2</a></li>
+                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置3</a></li>
+                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> ...</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Language</li>
-                                <li><a href="#" class="zh-CN">简体中文</a></li>
-                                <li><a href="#" class="en-US">English</a></li>
+                                <li class="dropdown-header"><i class="fa fa-language text-danger"></i>&nbsp;Language</li>
+                                <li><a href="#" class="zh-CN"><i class="fa fa-rmb"></i> 简体中文</a></li>
+                                <li><a href="#" class="en-US"><i class="fa fa-usd"></i> English</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -190,7 +190,15 @@
                             <ul class="action-btn-group left">
                                 <li class="sky-btn item"><a class="new-win" data-localize="index.right.action.btnname1" data-replace="right"><i class="fa fa-plus"></i> </a></li>
                                 <li class="sky-btn item"><a class="close-win" data-localize="index.right.action.btnname2" data-replace="right"><i class="fa fa-close"></i> </a></li>
-                                <li class="sky-btn item"><a class="clear-win" data-localize="index.right.action.btnname3" data-replace="right"><i class="fa fa-trash-o"></i> </a></li>
+                                <li class="sky-btn item"><a class="clean-win" data-localize="index.right.action.btnname3" data-replace="right"><i class="fa fa-trash-o"></i> </a></li>
+                                <li class="sky-btn item">
+                                    <a class="draw-win" data-localize="index.right.action.btnname4" data-replace="right">
+                                        <i class="fa fa-pencil-square-o"></i>
+                                        <span class="fa-stack">
+                                            <i class="fa fa-ban fa-stack-2x text-danger"></i>
+                                        </span>
+                                    </a>
+                                </li>
                             </ul>
                             <ul class="action-btn-group right">
                                 <li class="sky-btn item dropdown">
