--- a/web/index.html
+++ b/web/index.html
@@ -110,7 +110,7 @@
                             <!-- Tab panes -->
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane fade in input active" id="input-1">
-                                    <ul>
+                                    <ul style="position: relative;">
 
                                     </ul>
                                 </div>
@@ -337,6 +337,14 @@
                                 <li class="sky-btn item"><a class="new-win" data-localize="index.right.action.btnname1" data-replace="right"><i class="fa fa-plus"></i> </a></li>
                                 <li class="sky-btn item"><a class="close-win" data-localize="index.right.action.btnname2" data-replace="right"><i class="fa fa-close"></i> </a></li>
                                 <li class="sky-btn item"><a class="clear-win" data-localize="index.right.action.btnname3" data-replace="right"><i class="fa fa-trash-o"></i> </a></li>
+                                <li class="sky-btn item">
+                                    <a class="draw-win" data-localize="index.right.action.btnname4" data-replace="right">
+                                        <i class="fa fa-pencil-square-o"></i>
+                                        <span class="fa-stack">
+                                            <i class="fa fa-ban fa-stack-2x text-danger"></i>
+                                        </span>
+                                    </a>
+                                </li>
                             </ul>
                             <ul class="action-btn-group right">
                                 <li class="sky-btn item dropdown">
