--- a/web/index.html
+++ b/web/index.html
@@ -59,7 +59,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i></a>
                             <ul id="gbl-setting" class="dropdown-menu">
-                                <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置1</a></li>
+                                <li><a href="#" class="loggable"><i class="fa fa-comment-o fa-lg"></i> log</a></li>
                                 <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置2</a></li>
                                 <li><a href="#"><i class="fa fa-gear fa-lg"></i> 设置3</a></li>
                                 <li><a href="#"><i class="fa fa-gear fa-lg"></i> ...</a></li>
@@ -515,14 +515,15 @@
 <script src="lib/messenger/js/messenger-theme-flat.js"></script>
 <script src="lib/jquery-mousewheel/jquery.mousewheel.js" type="text/javascript"></script>
 <script src="lib/jquery-pep-js/jquery.pep.js" type="text/javascript"></script>
-<script src="lib/hammer-js/hammer.js" type="text/javascript"></script>
+<script src="lib/hammer-js/hammer.min.js" type="text/javascript"></script>
 <script src="lib/hammer-js/jquery.hammer.js" type="text/javascript"></script>
 <script src="lib/fullscreen.js" type="text/javascript"></script>
 <!--<script src="lib/jquery-indexeddb/jquery.indexeddb.min.js" type="text/javascript"></script>-->
 <script src="lib/html2canvas/html2canvas.min.js" type="text/javascript"></script>
 
-<script src="js/tool.js" type="text/javascript"></script>
+<script src="js/tool.min.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
+<!--<script src="js/main.min.js" type="text/javascript"></script>-->
 
 <script>
 $(function() {
