--- a/web/index.html
+++ b/web/index.html
@@ -726,12 +726,9 @@
                             </form>
                         </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane fade" id="screen_2">
-                    </div>
-                    <div role="tabpanel" class="tab-pane fade" id="screen_3">
-                    </div>
-                    <div role="tabpanel" class="tab-pane fade" id="screen_4">
-                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="screen_2"></div>
+                    <div role="tabpanel" class="tab-pane fade" id="screen_3"></div>
+                    <div role="tabpanel" class="tab-pane fade" id="screen_4"></div>
 
                     <form class="form-horizontal">
                         <div class="form-group">
