--- a/web/index1.html
+++ b/web/index1.html
@@ -371,7 +371,7 @@
 <script src="lib/html2canvas/html2canvas.min.js" type="text/javascript"></script>
 
 <script src="js/tool.js" type="text/javascript"></script>
-<script src="js/main1.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 
 <script>
 $(function() {
